# insta-optimizer

./: .gitignore  README.md  main.py  pyproject.toml  test_runner.py
insta_optimizer/: __init__.py  __main__.py  cli.py  image_processor.py  utils.py  video_processor.py
