[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "insta-optimizer"
version = "0.1.0"
description = "A CLI tool to optimize photos and videos for Instagram with optional border/matting framing."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Antigravity Code Assistant"}
]
dependencies = [
    "click>=8.0.0",
    "Pillow>=9.0.0",
    "rich>=10.0.0"
]

[project.scripts]
insta-optimizer = "insta_optimizer.cli:cli"
